# CTaps

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile.in  README.md  REFACTOR.md  candidate_racing_todo.md  cmake-variants.yaml  format.sh  picoquic_padding_error.c  quic_internet_test.c  runtests.py  runtests.sh  test_runner
.github/workflows/: cmake-single-platform.yml  ctaps-build-and-test.yml  doxygen.yml  run-test-script.yml
benchmark/: CMakeLists.txt  requirements.txt  research.txt  run_benchmarks.py  visualize.py
benchmark/annotations/: compare_annotated.py  count_annotated.py  quic_annotated.c  taps_annotated.c  tcp_annotated.c  verify_all.sh
benchmark/scripts/: README.md  get_dual_handshake_graph.sh  get_handshake_graph.sh  get_migration_graph.sh  get_small_file_graph.sh  get_udp_overhead_graph.sh  quic_file_server.py  run_benchmarks.py  setup_network.sh
benchmark/src/client/: benchmark_common_taps.h  benchmark_common_taps_callbacks.c  common_taps.c  common_taps.h  quic_benchmark_client.c  quic_benchmark_handshake_client.c  quic_client.c  taps_benchmark_handshake_client.c  taps_benchmark_quic_client.c  taps_benchmark_racing_client.c  taps_benchmark_tcp_client.c  taps_quic_client.c  taps_tcp_client.c  tcp_benchmark_client.c  tcp_benchmark_handshake_client.c  tcp_client.c
benchmark/src/client/udp_rtt/: baseline_udp_rtt_client.c  ctaps_udp_rtt_client.c  libuv_udp_rtt_client.c
benchmark/src/common/: benchmark_stats.c  benchmark_stats.h  file_generator.c  file_generator.h  protocol.h  timing.c  timing.h
benchmark/src/server/: quic_benchmark_server.c  quic_server.c  tcp_server.c
benchmark/src/server/udp_rtt/: udp_server.c
cmake/: dependencies.cmake  doxygen.cmake  format.cmake  tidy.cmake
docs/: Doxyfile.in  groups.h
examples/: CMakeLists.txt  example_client.c  example_server.c  quic_dns_example.c
include/: ctaps.h
source/: lib.c  lib.h  main.c  mocked_lib.c  mocked_lib.h
source/api/: ctaps.c  ctaps.h
source/api/message/: message.c  message.h
source/api/protocols/: protocol_interface.h
src/: ctaps_internal.h  main.c
src/candidate_gathering/: candidate_gathering.c  candidate_gathering.h  candidate_racing.c  candidate_racing.h
src/connection/: connection.c  connection.h  connection_group.c  connection_group.h  listener.c  listener.h  preconnection.c  preconnection.h
src/endpoint/: local_endpoint.c  local_endpoint.h  port_util.c  port_util.h  remote_endpoint.c  remote_endpoint.h  util.c  util.h
src/logging/: log.c  log.h
src/message/: framer.c  framer.h  message.c  message.h  message_context.c  message_context.h
src/protocol/: protocol_registry.c
src/protocol/quic/: quic.c  (+2 more)
src/security_parameter/: security_parameters.c  security_parameters.h
src/state/: ctaps_state.c
src/transport_property/: transport_properties.c  transport_properties.h
src/util/: uuid_util.c  uuid_util.h
test/: CMakeLists.txt  picoquic_ping_server.c  tcp_ping.py  tcp_ping_server.c  udp_ping.py  udp_ping_server.c
test/quic/: quic_ping_client.py  quic_ping_server.py  quic_ping_server_padded.py
test/source/: mocking_test.cpp  networking.cpp
test/source/fixtures/: awaiting_fixture.cpp
test/source/integration/: candidate_racing_test.cpp  listener.cpp  listener_test.cpp  udp_ping.cpp
test/source/integration/dns/: dns_test.cpp
test/source/integration/endpoint/: remote_endpoint_test.cpp
test/source/integration/quic/: quic_listen_test.cpp  quic_ping_test.cpp
test/source/integration/tcp/: tcp_listen_test.cpp  tcp_ping.cpp  tcp_ping_test.cpp
test/source/preconnection/: initiation.cpp
test/source/unit/candidate_gathering/: candidate_gathering_test.cpp
test/source/unit/connections/: connection_test.cpp  preconnection.cpp
test/source/unit/endpoint/: local.cpp  remote.cpp
test/source/unit/endpoint/local/: local_endpoint_resolve_test.cpp
test/source/unit/transport_properties/: transport_properties_test.cpp
test/source/unit/transport_properties/selection_properties/: selection_properties_test.cpp
test/source/util/: util.c  util.h
test/src/fixtures/: awaiting_fixture.cpp  integration_fixture.h
test/src/integration/: candidate_racing_test.cpp  framing_test.cpp  listener_test.cpp  udp_ping.cpp
test/src/integration/dns/: dns_integration_test.cpp  dns_test.cpp
test/src/integration/endpoint/: remote_endpoint_test.cpp
test/src/integration/message/: message_context_integration_test.cpp
test/src/integration/quic/: connection_clone_test.cpp  quic_abort_test.cpp  quic_listen_test.cpp  quic_migration_test.cpp  quic_ping_test.cpp
test/src/integration/tcp/: tcp_listen_test.cpp  tcp_ping_test.cpp
test/src/integration/udp/: udp_listen_test.cpp  udp_ping_test.cpp
test/src/preconnection/: initiation.cpp
test/src/unit/candidate_gathering/: candidate_gathering_test.cpp
test/src/unit/connections/: connection_abort_test.cpp  connection_group_test.cpp  connection_group_unit_test.cpp  connection_test.cpp  connection_unit_test.cpp  preconnection.cpp  preconnection_unit_test.cpp  socket_manager_unit_test.cpp
test/src/unit/endpoint/: endpoint_util_unit_test.cpp  local.cpp  local_endpoint_unit_test.cpp  remote.cpp  remote_endpoint_resolve_test.cpp  remote_endpoint_unit_test.cpp
test/src/unit/endpoint/local/: local_endpoint_resolve_test.cpp
test/src/unit/message/: message_context_test.cpp  message_context_unit_test.cpp  message_unit_test.cpp
test/src/unit/protocol/: quic_close_test.cpp  quic_unit_test.cpp  tcp_close_test.cpp  tcp_unit_test.cpp  udp_close_callback_test.cpp  udp_close_test.cpp  udp_unit_test.cpp
test/src/unit/security_parameters/: security_parameters_unit_test.cpp
test/src/unit/transport_properties/: transport_properties_unit_test.cpp
test/src/unit/transport_properties/connection_properties/: connection_properties_test.cpp
test/src/unit/transport_properties/message_properties/: message_properties_test.cpp
test/src/unit/transport_properties/selection_properties/: selection_properties_test.cpp  selection_properties_unit_test.cpp
test/src/unit/util/: uuid_unit_test.cpp
test/src/util/: util.h
(+74 files in other folders)
